--- a/.udrio.example.yml
+++ b/.udrio.example.yml
@@ -4,5 +4,5 @@ database:
   max_idle: 4
   idle_time: "5m" # minute(s)
   life_time: "60m" # minute(s)
-  dsn: "host=127.0.0.1 user=postgres password=postgres dbname=postgres port=5432 sslmode=disable TimeZone=Asia/Makassar"
+  dsn: "host=udrio_postgres user=postgres password=postgres dbname=postgres port=5432 sslmode=disable TimeZone=Asia/Makassar"
 PORT: 8080
