--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - postgres
     ports:
-      - "8080:8080"
+      - "${PORT}:${PORT}"
     restart: always
     volumes:
       - .:/app
@@ -16,9 +16,9 @@ services:
     container_name: udrio_postgres
     image: postgres:15.1-alpine
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=udrio
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
