--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,16 @@ PORT=8080
 ENV='dev'
 
 # POSTGRES
-POSTGRES_USER='postgres'
-POSTGRES_PASSWORD='postgres'
-POSTGRES_DB='udrio'
 POSTGRES_DSN='host=udrio_postgres user=postgres password=postgres dbname=udrio port=5432 sslmode=disable TimeZone=Asia/Makassar'
 MAX_IDLE=4
 MAX_CONNS=100
 IDLE_TIME="5m"
 LIFE_TIME="60m"
+
+
+# OAUTH2
+OAUTH_CLIENT_ID=""
+OAUTH_CLIENT_SECRET=""
+OAUTH_CALLBACK_URL="http://localhost:8080/oauth2/callback"
+OAUTH_REDIRECT_URL="http://localhost:3000"
+OAUTH_STATE=""
