--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,6 @@ LIFE_TIME="60m"
 # OAUTH2
 OAUTH_CLIENT_ID=""
 OAUTH_CLIENT_SECRET=""
-OAUTH_CALLBACK_URL="http://localhost:8080/oauth2/callback"
+OAUTH_CALLBACK_URL="http://localhost:8080/oauth/callback"
 OAUTH_REDIRECT_URL="http://localhost:3000"
 OAUTH_STATE=""
