chore: call user handler on oauth login

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT=8080
 ENV='dev'
 
 # POSTGRES
-POSTGRES_DSN='host=udrio_postgres user=postgres password=postgres dbname=udrio port=5432 sslmode=disable TimeZone=Asia/Makassar'
+POSTGRES_DSN='host=udrio_postgres user=postgres password=postgres dbname=udrio port=5432 sslmode=disable TimeZone=GMT+0'
 MAX_IDLE=4
 MAX_CONNS=100
 IDLE_TIME="5m"
