--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,19 @@ ENV='dev'
 POSTGRES_DSN='host=udrio_postgres user=postgres password=postgres dbname=udrio port=5432 sslmode=disable TimeZone=GMT+0'
 MAX_IDLE=4
 MAX_CONNS=100
-IDLE_TIME="5m"
-LIFE_TIME="60m"
-
+IDLE_TIME='5m'
+LIFE_TIME='60m'
 
 # OAUTH2
-OAUTH_CLIENT_ID=""
-OAUTH_CLIENT_SECRET=""
-OAUTH_CALLBACK_URL="http://localhost:8080/oauth/callback"
-OAUTH_REDIRECT_URL="http://localhost:3000"
-OAUTH_STATE=""
+OAUTH_CLIENT_ID=''
+OAUTH_CLIENT_SECRET=''
+OAUTH_CALLBACK_URL='http://localhost:8080/oauth/callback'
+OAUTH_REDIRECT_URL='http://localhost:3000'
+OAUTH_STATE=''
+
+# JWT
+JWT_SECRET=''
+JWT_EXPIRES_IN='1h0m0s'
+JWT_REFRESH_SECRET=''
+JWT_REFRESH_EXPIRES_IN='720h0m0s'
+
