--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=8080
-ENV='dev'
+ENV='dev' # dev | production
 
 # POSTGRES
 POSTGRES_DSN='host=udrio_postgres user=postgres password=postgres dbname=udrio port=5432 sslmode=disable TimeZone=GMT+0'
