--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,30 +8,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v2
       - name: Create env file
         env:
           PORT: 8080
-          ENV: 'production' # dev | production
+          ENV: "production" # dev | production
           # POSTGRES
           POSTGRES_DSN: ${{secrets.POSTGRES_DSN}}
           MAX_IDLE: 4
           MAX_CONNS: 100
-          IDLE_TIME: '5m'
-          LIFE_TIME: '60m'
+          IDLE_TIME: "5m"
+          LIFE_TIME: "60m"
           # OAUTH2
           OAUTH_CLIENT_ID: ${{secrets.OAUTH_CLIENT_ID}}
           OAUTH_CLIENT_SECRET: ${{secrets.OAUTH_CLIENT_SECRET}}
-          OAUTH_CALLBACK_URL: 'https://api-udrio.up.railway.app/oauth/callback'
-          OAUTH_REDIRECT_URL: 'https://udrio.vercel.app/auth'
+          OAUTH_CALLBACK_URL: "https://api-udrio.up.railway.app/oauth/callback"
+          OAUTH_REDIRECT_URL: "https://udrio.vercel.app/auth"
           OAUTH_STATE: ${{secrets.OAUTH_STATE}}
 
           # JWT
           JWT_SECRET: ${{secrets.JWT_SECRET}}
-          JWT_EXPIRES_IN: '1h0m0s'
+          JWT_EXPIRES_IN: "1h0m0s"
           JWT_REFRESH_SECRET: ${{secrets.JWT_REFRESH_SECRET}}
-          JWT_REFRESH_EXPIRES_IN: '720h0m0s'
-        
+          JWT_REFRESH_EXPIRES_IN: "720h0m0s"
+
         run: |
           touch .env
           echo PORT=$PORT >> .env
@@ -48,7 +49,7 @@ jobs:
           echo OAUTH_CALLBACK_URL=$OAUTH_CALLBACK_URL >> .env
           echo OAUTH_REDIRECT_URL=$OAUTH_REDIRECT_URL >> .env
           echo OAUTH_STATE=$OAUTH_STATE >> .env
-          
+
           echo JWT_SECRET=$JWT_SECRET >> .env
           echo JWT_EXPIRES_IN=$JWT_EXPIRES_IN >> .env
           echo JWT_REFRESH_SECRET=$JWT_REFRESH_SECRET >> .env
@@ -60,5 +61,5 @@ jobs:
           ls -a .
           echo "ls -a ${{ github.workspace }}"
           ls -a ${{ github.workspace }}
-        
+
         shell: bash
