--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,4 +1,4 @@
-name: Setup ENV
+name: Build
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -63,3 +63,11 @@ jobs:
           ls -a ${{ github.workspace }}
 
         shell: bash
+
+  build:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: compile and release
+        uses: ngs/go-release.action@v1.0.2
