--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=8080
 ENV='dev' # dev | production
 
 # POSTGRES
-POSTGRES_DSN='host=udrio_postgres user=postgres password=postgres dbname=udrio port=5432 sslmode=disable TimeZone=GMT+0'
+POSTGRES_DSN=''
 MAX_IDLE=4
 MAX_CONNS=100
 IDLE_TIME='5m'
@@ -12,7 +12,7 @@ LIFE_TIME='60m'
 OAUTH_CLIENT_ID=''
 OAUTH_CLIENT_SECRET=''
 OAUTH_CALLBACK_URL='http://localhost:8080/oauth/callback'
-OAUTH_REDIRECT_URL='http://localhost:3000'
+OAUTH_REDIRECT_URL='http://localhost:3000/auth'
 OAUTH_STATE=''
 
 # JWT
@@ -20,4 +20,3 @@ JWT_SECRET=''
 JWT_EXPIRES_IN='1h0m0s'
 JWT_REFRESH_SECRET=''
 JWT_REFRESH_EXPIRES_IN='720h0m0s'
-
