--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ LIFE_TIME='60m'
 # OAUTH2
 OAUTH_CLIENT_ID=''
 OAUTH_CLIENT_SECRET=''
-OAUTH_CALLBACK_URL='http://localhost:8080/oauth/callback'
-OAUTH_REDIRECT_URL='http://localhost:3000/auth'
+OAUTH_CALLBACK_URL='https://api-udrio.up.railway.app/oauth/callback'
+OAUTH_REDIRECT_URL='https://udrio.vercel.app/auth'
 OAUTH_STATE=''
 
 # JWT
