--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
-ENV='dev' # dev | production
+ENV='' # dev | production
 
 # POSTGRES
 POSTGRES_DSN=''
@@ -11,7 +11,7 @@ LIFE_TIME='60m'
 # OAUTH2
 OAUTH_CLIENT_ID=''
 OAUTH_CLIENT_SECRET=''
-OAUTH_CALLBACK_URL='https://api-udrio.up.railway.app/oauth/callback'
+OAUTH_CALLBACK_URL='http://api-udrio.up.railway.app/oauth/callback'
 OAUTH_REDIRECT_URL='https://udrio.vercel.app/auth'
 OAUTH_STATE=''
 
