--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "${PORT}:${PORT}"
     restart: always
     volumes:
-      - .:/app
+      - .:/web/udrio
   postgres:
     container_name: udrio_postgres
     image: postgres:15.1-alpine
