chore: init redis

--- a/.env
+++ b/.env
@@ -1,18 +1,22 @@
 PORT=8080
-ENV='' # dev | production
+ENV='dev' # dev | production
 
 # POSTGRES
-POSTGRES_DSN=''
+POSTGRES_DSN='host=udrio_postgres user=postgres password=postgres dbname=udrio port=5432 sslmode=disable TimeZone=GMT+0'
 MAX_IDLE=4
 MAX_CONNS=100
 IDLE_TIME='5m'
 LIFE_TIME='60m'
 
+# REDIS
+REDIS_URL='redis://:@udrio_redis:6379'
+REDIS_PORT=6379
+
 # OAUTH2
 OAUTH_CLIENT_ID=''
 OAUTH_CLIENT_SECRET=''
-OAUTH_CALLBACK_URL='http://api-udrio.up.railway.app/oauth/callback'
-OAUTH_REDIRECT_URL='https://udrio.vercel.app/auth'
+OAUTH_CALLBACK_URL='http://localhost:8080/oauth/callback'
+OAUTH_REDIRECT_URL='http://localhost:3000/auth'
 OAUTH_STATE=''
 
 # JWT
