--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - postgres
+      - redis
     ports:
       - "${PORT}:${PORT}"
     restart: always
@@ -16,13 +17,24 @@ services:
     container_name: udrio_postgres
     image: postgres:15.1-alpine
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=udrio
     ports:
       - "5432:5432"
     volumes:
       - postgres-db:/data/udrio
+  redis:
+    container_name: udrio_redis
+    image: redis:7-alpine
+    restart: always
+    command: redis-server --save 20 1 --loglevel warning
+    ports:
+      - "${REDIS_PORT}:${REDIS_PORT}"
+    volumes:
+      - cache:/data
 volumes:
   postgres-db:
+    driver: local
+  cache:
     driver: local
