--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ REDIS_PORT=6379
 # OAUTH2
 OAUTH_CLIENT_ID=''
 OAUTH_CLIENT_SECRET=''
-OAUTH_CALLBACK_URL='http://api-udrio.up.railway.app/oauth/callback'
-OAUTH_REDIRECT_URL='https://udrio.vercel.app/auth'
+OAUTH_CALLBACK_URL='http://localhost:8080/oauth/callback'
+OAUTH_REDIRECT_URL='http://localhost:3000/auth'
 OAUTH_STATE=''
 
 # JWT
