feat: notification mail for create order

--- a/.env
+++ b/.env
@@ -24,3 +24,7 @@ JWT_SECRET=''
 JWT_EXPIRES_IN='1h0m0s'
 JWT_REFRESH_SECRET=''
 JWT_REFRESH_EXPIRES_IN='720h0m0s'
+
+# MAIL
+MAIL_SENDER='test@mail.com'
+MAIL_SENDER_PASS=''
