--- a/.env.example
+++ b/.env.example
@@ -13,18 +13,18 @@ REDIS_URL='redis://:@udrio_redis:6379'
 REDIS_PORT=6379
 
 # OAUTH2
-OAUTH_CLIENT_ID='760695751069-kkhimdnjnob8ac3ttte6dggf0it1k5gu.apps.googleusercontent.com'
-OAUTH_CLIENT_SECRET='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'
+OAUTH_CLIENT_ID=''
+OAUTH_CLIENT_SECRET=''
 OAUTH_CALLBACK_URL='http://localhost:8080/oauth/callback'
 OAUTH_REDIRECT_URL='http://localhost:3000/auth'
-OAUTH_STATE='eb8ba3d084d2569ab72d'
+OAUTH_STATE=''
 
 # JWT
-JWT_SECRET='OIeGtvn0Ua8U4A2PYKeYjKGDtyDwO4EE9jocyIZAO78ps4QxuL'
+JWT_SECRET=''
 JWT_EXPIRES_IN='1h0m0s'
-JWT_REFRESH_SECRET='tsVz3kCb36nCwEKfnFkf8Dnwd3B0HqegxmN81LD7beV1lJhZFh'
+JWT_REFRESH_SECRET=''
 JWT_REFRESH_EXPIRES_IN='720h0m0s'
 
 # MAIL
 MAIL_SENDER='ryannadiputraa@gmail.com'
-MAIL_SENDER_PASS='buzkbqyarbqmtaxv'
+MAIL_SENDER_PASS=''
