feat: admin upload product image

--- a/.env
+++ b/.env
@@ -25,6 +25,10 @@ JWT_EXPIRES_IN='1h0m0s'
 JWT_REFRESH_SECRET=''
 JWT_REFRESH_EXPIRES_IN='720h0m0s'
 
+# FIREBASE
+FIREBASE_BUCKET='ud-rio-da0b0'
+FIREBASE_STORAGE_TOKEN=''
+
 # MAIL
-MAIL_SENDER='test@mail.com'
+MAIL_SENDER='ryannadiputraa@gmail.com'
 MAIL_SENDER_PASS=''
