--- a/.env
+++ b/.env
@@ -26,12 +26,10 @@ JWT_REFRESH_SECRET=''
 JWT_REFRESH_EXPIRES_IN='720h0m0s'
 
 # FIREBASE
-FIREBASE_BUCKET='ud-rio-da0b0'
+FIREBASE_BUCKET=''
 FIREBASE_STORAGE_TOKEN=''
+FIREBASE_CONFIG=''
 
 # MAIL
 MAIL_SENDER='ryannadiputraa@gmail.com'
 MAIL_SENDER_PASS=''
-
-# FIREBASE
-FIREBASE_CONFIG=''
