refactor: firebase storage

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -28,7 +28,7 @@ jwt:
 firebase:
   bucket: ''
   storageToken: ''
-  configPath: './firebase-sdk.json'
+  configPath: 'config/firebase-sdk.json'
 
 mail:
   sender: 'ryannadiputraa@gmail.com'
